<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="circle">Add To Circle</string>
    <string name="logout">Logout</string>
     <string name="Home">Home</string>
 <string name="search">search</string>
     <string name="search_hint">Search Torrent ...</string>
</resources>
