<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
        android:id="@+id/Home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Home"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/circle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/circle"/>
    <item
        android:id="@+id/Logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>
 
     <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@drawable/ic_search_category_suggest"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
   

</menu>
